; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/parisc/kernel/extr_drivers.c_init_parisc_bus.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/parisc/kernel/extr_drivers.c_init_parisc_bus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@parisc_bus_type = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Could not register PA-RISC bus type\0A\00", align 1
@root = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"Could not register PA-RISC root device\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_parisc_bus() #0 {
  %1 = call i64 @bus_register(i32* @parisc_bus_type)
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @panic(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %5

5:                                                ; preds = %3, %0
  %6 = call i64 @device_register(i32* @root)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = call i32 @panic(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %5
  %11 = call i32 @get_device(i32* @root)
  ret void
}

declare dso_local i64 @bus_register(i32*) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i64 @device_register(i32*) #1

declare dso_local i32 @get_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
